[tool.poetry]
name = "flask-backend"
version = "0.1.0"
description = ""
authors = ["mlasker0 <shantulasker30@gmail.com>"]
package-mode = false  # ← এই লাইনটি যোগ করুন ✅

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-cors = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
